--- a/document_final.tex
+++ b/document_final.tex
@@ -183,7 +183,9 @@ Introduisons dès à présent quelques définitions qui nous seront utiles par la su
 
  \newpage
  \section{Propriété abélienne}
+ On va prouver que le choix de l'ordre dans \ref{
  \label{abel}
+ 
  \begin{Lemme}
  Soit $\Lambda$ une partie finie de $\mathbb{Z}^d$, correspondant à la région déjà explorée, et soient $x,y \in \Lambda$. Soit $\Lambda_{x,y}$ la région obtenue en ayant lancé un explorateur depuis $x$, puis un explorateur depuis $y$.
  
