--- a/document_final.tex
+++ b/document_final.tex
@@ -139,7 +139,7 @@ L'erreur interne, notée $\delta_I$, est la différence entre le rayon du cercle l
   \end{The}
   
  \begin{Rq}
-  Dans \cite{ref2}, ils prouvent également qu'en dimension $d=2$, $\exists\alpha_2 > 0$ tel que
+  Dans \cite{ref2}, il est également prouvé qu'en dimension $d=2$, $\exists\alpha_2 > 0$ tel que
   \begin{equation}
    \lim_{n\to\infty}P(\exists k\geqslant n,\ \delta_0(k)\geqslant h(k)\ \normalfont{|}\ \delta_I(n)<h(n))=1
   \end{equation}
@@ -182,10 +182,7 @@ Introduisons dès à présent quelques définitions qui nous seront utiles par la su
  \end{Rq}
 
  \newpage
- \section{Propriété abélienne}
- On va prouver que le choix de l'ordre dans \ref{
- \label{abel}
-
+ \section{Propriété abélienne}\label{abel}
  On va prouver ici que le choix d'un ordre prédéfini en \ref{iii} sur $\mathbb{Z}^d$ ne change rien à la suite de la démonstration. Le lemme suivant est issu de \cite{ref4} :
  \begin{Lemme}
  Soit $\Lambda$ une partie finie de $\mathbb{Z}^d$, correspondant à la région déjà explorée, et soient $x,y \in \Lambda$. Soit $\Lambda_{x,y}$ la région obtenue en ayant lancé un explorateur depuis $x$, puis un explorateur depuis $y$.
@@ -219,9 +216,9 @@ Soit n un entier naturel, $\Lambda$ une partie de $\mathbb{Z}^d$, $\xi=(\xi_1,\d
 \end{equation*}
 \end{The}
 
-Illustrons ce théorème avec l'exemple de l'exploration par vague qui nous servira par la suite. On va réaliser la région explorée A(n+m) en 3 vagues. La première vague consiste à faire partir n explorateurs de l'origine et à considérer la région explorée correspondante $A_1=A(n)$ (en bleu sur la figure \ref{vague}). 
+Illustrons ce théorème avec l'exemple de l'exploration par vague qui nous servira par la suite. On va réaliser la région explorée $A(n+m)$ en $3$ vagues. La première vague consiste à faire partir $n$ explorateurs de l'origine et à considérer la région explorée correspondante $A_1=A(n)$ (en bleu sur la figure \ref{vague}). 
 
-Pour la deuxième vague, on fait partir m explorateurs de l'origine avec pour région préalablement explorée $A_1$ et on les arrête sur $\mathbb{B}(0,R)$ (en vert sur \ref{vague}). On note $A_2$ la région explorée après les deux vagues et $\Delta_R$ la configuration des explorateurs de la deuxième vague arrêtés sur $\partial\mathbb{B}(0,R)$ :
+Pour la deuxième vague, on fait partir $m$ explorateurs de l'origine avec pour région préalablement explorée $A_1$ et on les arrête sur $\mathbb{B}(0,R)$ (en vert sur \ref{vague}). On note $A_2$ la région explorée après les deux vagues et $\Delta_R$ la configuration des explorateurs de la deuxième vague arrêtés sur $\partial\mathbb{B}(0,R)$ :
 \begin{equation*}
  A_2=A_1\cup A_R(A_1,\zeta_0^N) 
  \qquad\Delta_R=\{\zeta_z^{W_R(A_1;\zeta_0^m,z)},z\in\partial\mathbb{B}(0,R)\}
