--- a/document_final.bib
+++ b/document_final.bib
@@ -2,7 +2,7 @@
 author={Asselah, Amine and Gaudilli\`ere, Alexandre},
 title={{Sub-logarithmic fluctuations for internal DLA}},
 journal = {Arxiv preprint},
-url={http://arxiv.org/abs/1011.4592},
+note={\url{http://arxiv.org/abs/1011.4592}},
 year={2010},
 }
 
@@ -10,7 +10,7 @@ year={2010},
 author={Asselah, Amine and Gaudilli\`ere, Alexandre},
 title={{Lower bounds on fluctuations for internal DLA}},
 journal = {Arxiv preprint},
-url={http://arxiv.org/abs/1111.4233},
+note={\url{http://arxiv.org/abs/1111.4233}},
 year={2010},
 }
 
@@ -49,6 +49,7 @@ volume={20},
 year={1992},
 number={4},
 pages={2117-2140},
+note={\url{http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.aop/1176989542}},
 }
 
 @article{ref6,
@@ -59,6 +60,7 @@ volume={23},
 year={1995},
 number={1},
 pages={71-86},
+note={\url{http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.aop/1176988377}},
 }
 
 @article{ref7,
@@ -66,7 +68,13 @@ title = {Internal DLA in Higher Dimensions},
 author={Jerison, David and Levine, Lionel and Sheffield, Scott},
 journal={Arxiv preprint},
 year={2012},
-url={http://de.arxiv.org/abs/1012.3453},
+note={\url{http://de.arxiv.org/abs/1012.3453}},
 }
 
-
+@article{ref8,
+title={Logarithmic fluctuations for internal DLA},
+author={Jerison, David and Levine, Lionel and Sheffield, Scott},
+journal={Arxiv preprint},
+year={2012},
+note={\url{http://arxiv.org/abs/1010.2483}},
+}
